# minishell

./: .clang-format  .gitignore  CMakeLists.txt  README.md  SPECS.md  fork-execve.c
.devcontainer/: Dockerfile  devcontainer.json
docker/: Dockerfile  docker-compose.yml
docs/: relatorio.typ
include/: mylib.h
src/: CMakeLists.txt  fork-execve.c  fork-print.c  fork.c  main.c  mylib.c
tests/: CMakeLists.txt  test_main.c  test_mylib.c
